test/implicitDup16_4.slq
// args: --run

def foo(){
	a:=H(0);
	b:=dup(a);
	x:=b;
	c:=b;
	forget(x,c);
	for i in 0..2{
		H(0):=a;
		a:=H(0);
	}
	H(0):=a;
	return b; /// error
}

